# netcollector

./: .gitignore  .ruff.toml  README.md  Taskfile.yaml  config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/netcollector/: __init__.py  exceptions.py
src/netcollector/cli/: __init__.py  collect.py  export.py  main.py  utils.py
src/netcollector/collector/: __init__.py  exporters.py  factories.py  interfaces.py  main.py.old  normalizer.py  orchestrator.py  parsers.py
src/netcollector/config/: __init__.py  commands.py  commands.yaml  config.py  inventory.py  logging.py  old-commands.yaml  utils.py
src/netcollector/utils/: __init__.py  database.py  logging.py  storage.py
